# korean-flashcard-pipeline

./: .env.example  .env.production  .env.production.template  .gitignore  API_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_STREAMLINED.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROJECT_INDEX.md  README.md  README_DEPLOYMENT.md  REORGANIZATION_SUMMARY.md  SECURITY.md  migration_report.txt  post_task_review.sh  pre_task_review.sh  pyproject.toml  pyproject_poetry.toml  pytest.ini  requirements.txt  run_tests_mock.py  settings.hardcode  setup.py  test_concurrent_pipeline.py  test_concurrent_simple.py
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.timekeeper/: history.json
Anthropic_Documentation_20250629/: docs.anthropic.com_en_api_admin-api_apikeys_list-api-keys.md  docs.anthropic.com_en_api_admin-api_apikeys_update-api-key.md  docs.anthropic.com_en_api_admin-api_invites_create-invite.md  docs.anthropic.com_en_api_admin-api_invites_delete-invite.md  docs.anthropic.com_en_api_admin-api_workspace_members_create-workspace-member.md  docs.anthropic.com_en_api_admin-api_workspace_members_delete-workspace-member.md  docs.anthropic.com_en_api_admin-api_workspaces_archive-workspace.md  docs.anthropic.com_en_api_admin-api_workspaces_update-workspace.md  docs.anthropic.com_en_api_claude-on-vertex-ai.md  docs.anthropic.com_en_api_complete.md  docs.anthropic.com_en_api_errors.md  docs.anthropic.com_en_api_files-delete.md  docs.anthropic.com_en_api_files-metadata.md  docs.anthropic.com_en_api_handling-stop-reasons.md  docs.anthropic.com_en_api_listing-message-batches.md  docs.anthropic.com_en_api_messages-batch-examples.md  docs.anthropic.com_en_api_messages-examples.md  docs.anthropic.com_en_api_models.md  docs.anthropic.com_en_api_prompt-tools-improve.md  docs.anthropic.com_en_api_rate-limits.md  docs.anthropic.com_en_api_streaming.md
Open_Router_Documentation_20250629/: openrouter.ai_docs_api-reference_api-keys_delete-api-key.md  openrouter.ai_docs_api-reference_api-keys_delete-api-key_explorer=true.md  openrouter.ai_docs_api-reference_api-keys_get-current-api-key_explorer=true.md  openrouter.ai_docs_api-reference_api-keys_list-api-keys_explorer=true.md  openrouter.ai_docs_api-reference_api-keys_update-api-key.md  openrouter.ai_docs_api-reference_api-keys_update-api-key_explorer=true.md  openrouter.ai_docs_api-reference_authentication_exchange-authorization-code-for-api-key.md  openrouter.ai_docs_api-reference_authentication_exchange-authorization-code-for-api-key_explorer=true.md  openrouter.ai_docs_api-reference_chat-completion.md  openrouter.ai_docs_api-reference_chat-completion_explorer=true.md  openrouter.ai_docs_api-reference_create-a-coinbase-charge.md  openrouter.ai_docs_api-reference_errors.md  openrouter.ai_docs_api-reference_get-a-generation.md  openrouter.ai_docs_api-reference_get-credits_explorer=true.md  openrouter.ai_docs_api-reference_list-available-models_explorer=true.md  openrouter.ai_docs_api-reference_list-available-providers.md  openrouter.ai_docs_api-reference_list-endpoints-for-a-model.md  openrouter.ai_docs_api-reference_overview.md  openrouter.ai_docs_api-reference_streaming.md  openrouter.ai_docs_community_frameworks-overview.md  openrouter.ai_docs_community_frameworks.md  openrouter.ai_docs_community_lang-chain.md  openrouter.ai_docs_community_langchain.md  openrouter.ai_docs_community_vercel-ai-sdk.md  openrouter.ai_docs_features_message-transforms.md  openrouter.ai_docs_features_model-routing.md  openrouter.ai_docs_features_prompt-caching.md  openrouter.ai_docs_features_uptime-optimization.md  openrouter.ai_docs_overview_models.md  openrouter.ai_docs_use-cases_byok.md  openrouter.ai_docs_use-cases_mcp-servers.md  openrouter.ai_docs_use-cases_user-tracking.md
Phase1_Design/: .claude  API_SPECIFICATIONS.md  DATABASE_DESIGN.md  INTEGRATION_DESIGN.md  PIPELINE_DESIGN.md  README.md  SYSTEM_DESIGN.md
docker/: .dockerignore  Dockerfile  Dockerfile.production  Dockerfile.simple
docs/: .claude  10K_HSK_List.csv  API_REFERENCE.md  BEST_PRACTICES_RESEARCH_2025.md  CIRCUIT_BREAKER_CONSOLIDATION.md  CIRCUIT_BREAKER_FIX_SUMMARY.md  DATABASE_CIRCUIT_BREAKER.md  DATABASE_CONSOLIDATION_PLAN.md  DATABASE_RATE_LIMITER.md  DATABASE_REORGANIZATION_SUMMARY.md  DATABASE_SCHEMA_V2.md  DEPENDENCY_MANAGEMENT_EVALUATION.md  FLASHCARD_OUTPUT_SPEC.md  HOOKS_IMPROVEMENT_RESEARCH_2025.md  HOOKS_OPTIMIZATION_COMPLETE.md  HOOKS_OPTIMIZATION_EXAMPLES.md  IMPLEMENTATION_ROADMAP.md  INGRESS_API_DOCUMENTATION.md  INTELLIGENT_ASSISTANT_README.md  MIGRATION_STRATEGY.md  MODULE_IMPROVEMENT_RECOMMENDATIONS.md  NUANCE_CREATOR_OUTPUT_SPEC.md  QUICK_START.md  README.md  TEST_COVERAGE.md  TROUBLESHOOTING.md  cache_analysis_report.md
electron-app/: .env.example  .eslintrc.json  .gitignore  GUI_README.md  README.md  index.html  jest.config.js  jest.config.ts  package.json  playwright.config.ts  test-gui.js  test-startup.js  tsconfig.json  vite.config.ts
examples/: .claude  README.md  advanced_caching_usage.py  circuit_breaker_retry_integration.py  database_circuit_breaker_usage.py  database_pooling_usage.py  database_rate_limiter_usage.py  error_handling_demo.py  error_tracking_usage.py  modern_cli_usage.py  opentelemetry_usage.py  pipeline_usage.py  processing_optimizer_example.py  retry_demo.py  sharded_rate_limiter_usage.py  validation_usage.py
external_docs/: .claude  README.md
flashcard_cli_tool/: .env.example  README.md  example_input.csv  flashcard_processor.py  requirements.txt  (+1 more)
src/rust/cache/: Cargo.toml
src/rust/core/: Cargo.toml
src/rust/core/src/: cache_manager.rs  lib.rs  logging.rs  python_interop.rs  traits.rs
src/rust/core/src/database/: connection.rs  migrations.rs  mod.rs
src/rust/core/src/database/repositories/: cache.rs  mod.rs  queue.rs  vocabulary.rs
src/rust/core/src/models/: cache.rs  error.rs  mod.rs  queue.rs  vocabulary.rs
src/rust/core/tests/: mod.rs
src/rust/pipeline/: Cargo.toml
src/rust/pipeline/src/: batch_processor.rs  cli.rs  errors.rs  export.rs  lib.rs  main.rs  monitoring.rs  pipeline.rs  python_bridge.rs
(+533 files in other folders)
