[package]
name = "korean-flashcard-pipeline"
version = "0.1.0"
edition = "2021"
authors = ["Korean Language Learning Team"]
description = "AI-powered flashcard generation pipeline for Korean language learning"
license = "MIT"
repository = "https://github.com/yourusername/korean-flashcard-pipeline"

[workspace]
members = [
    "src/rust/core",
    "src/rust/pipeline",
    "src/rust/cache"
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
sha2 = "0.10"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1