[package]
name = "flashcard-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
flashcard-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }