[package]
name = "flashcard-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
flashcard-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
thiserror = "1.0"
pyo3 = { workspace = true, features = ["auto-initialize", "extension-module"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
indicatif = "0.17"
console = "0.15"
crossbeam-channel = "0.5"
parking_lot = "0.12"

[features]
default = ["python"]
python = ["pyo3", "pyo3-asyncio"]

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"

[[bin]]
name = "flashcard-pipeline"
path = "src/main.rs"